# Group4HSDL

./: CMakeLists.txt  Makefile  README.md  compile_commands.json  project_structure.txt
.cache/clangd/index/: Groups.h.8D87D4B374805CD1.idx  ThreadPool.h.82BB5D70DF9EC76C.idx  binary_save_read_vector_of_vectors.h.00EEF53D07E1F26B.idx  cuda_vector.cuh.B475BDDB71EF48DB.idx  dijkstra.cpp.37D1E4694033DC55.idx  dijkstra.h.6D8EBBB8F3142D35.idx  gen_groups.cpp.04575D41BB7249DD.idx  graph_v_of_v.h.133D59FF341F043A.idx  mmpool.cuh.2CC0CB48C59A2BFD.idx  parse_string.h.CE7AE943769DAA07.idx  sorted_vector_binary_operations.h.1CEC07EADC920D02.idx  test_cuda_vector.cu.A994BD0054E079CF.idx  test_dijkstra.cpp.FF09B1C336D46994.idx  test_readGraph.cpp.0579D9EA20A153D1.idx
includes/definition/: hub_def.h  mmpool_size.h
includes/generation/: cuda_clean_label.cuh  cuda_query.cuh  cuda_sort.cuh  gen_label.cuh
includes/graph/: gpu_graph.cuh  graph_v_of_v.h  graph_v_of_v_generate_random_graph.h  graph_v_of_v_update_vertexIDs_by_degrees_large_to_small.h
includes/label/: gen_label.cuh  global_labels.cuh  hop_constrained_two_hop_labels.cuh  hop_constrained_two_hop_labels.h
includes/memoryManagement/: cuda_hashtable.cuh  cuda_label.cuh  cuda_queue.cuh  cuda_vector.cuh  mmpool.cuh
includes/text_mining/: StringCompare_caseInSensitive.h  convert_number_to_array_of_binary.h  latitude_and_longitude_distance.h  list_all_files_in_a_directory.h  parse_string.h  parse_substring_between_pairs_of_delimiters.h  parse_substring_between_two_unique_delimiters.h  read_csv.h  read_file_line_by_line.h  read_file_total_line_number.h  replace_chars_in_string.h  string_contains_number.h  string_is_number.h  utc_time_to_local_time.h
includes/tool_functions/: Combinations_Permutations.h  Current_Memory_Consumption_of_This_Process.h  ThreadPool2.h
includes/utilities/: CPU_adj_list.hpp  GPU_csr.hpp  GPU_shortest_paths.cuh  dijkstra.cuh  dijkstra.h
includes/vgroup/: CDLP_group.cuh  CT-Kmeans.cuh  CT-Kmeans.h  Groups.h  Kmeans_group.cuh  Kmeans_group.h  Louvain_group.cuh  Louvain_group.h  Random_group.cuh  kmeans.h  louvain.h
includes/vgroup/CDLP/: GPU_Community_Detection.cuh
includes/vgroup/CT/: CT.hpp  CT_labels.hpp  PLL.hpp  two_hop_labels.hpp
includes/vgroup/Louvain/: louvain.h
memoryManagement/: CMakeLists.txt  README.md
memoryManagement/include/: cuda_vector.cuh  label.h  mmpool.cuh
memoryManagement/src/: cuda_vector.cu  mmpool.cu
sources/generation/: cuda_clean_label.cu  cuda_query.cu  cuda_sort.cu  gen_label.cu
sources/graph/: gpu_graph.cu
sources/label/: gen_label.cu  global_labels.cu  hop_constrained_two_hop_labels.cpp  hop_constrained_two_hop_labels.cu
sources/utilities/: dijkstra.cpp  dijkstra.cu  hash.cpp
sources/vgroup/: Kmeans_group.cpp  Kmeans_group.cu  gen_groups.cpp  kmeans.cpp
sources/vgroup/Louvain/: louvain.cpp
test/: CMakeLists.txt  test_cdlp.cu  test_ct_kmeans.cpp  test_ct_kmeans.cu  test_cuda_queue.cu  test_cuda_vector.cu  test_dijkstra.cpp  test_dijkstra.cu  test_gen_group.cpp  test_gen_groups.cpp  test_generation.cu  test_globla_labels.cu  test_kmeans.cpp  test_kmeans.cu  test_louvain.cpp  test_louvain.cu  test_query_cuda.cu  test_random.cpp
test/test_cuda_traget/: test_cuda_vector.cu  test_gen_groups.cu  test_generation.cu  test_readGraph.cpp
